#
# configure.in for mm5_suite
# Graziano Giuliani University of L'Aquila
#

AC_INIT()

VERSION=1.2
AC_DEFINE_UNQUOTED(VERSION, "$VERSION", [version number string])
AC_SUBST(VERSION)

AC_PROG_CC
AC_PROG_INSTALL

# System Checks

AC_CHECK_HEADERS(ctype.h)
AC_CHECK_HEADERS(errno.h)
AC_CHECK_HEADERS(float.h)
AC_CHECK_HEADERS(libgen.h)
AC_CHECK_LIB(gen, basename, [LIBS="-lgen $LIBS"])
AC_CHECK_HEADERS(pwd.h)
AC_CHECK_FUNC(getpwuid, [CFLAGS="$CFLAGS -DHAVE_GETPWUID_F"])
AC_CHECK_HEADERS(netdb.h)
AC_CHECK_FUNC(gethostbyname, [CFLAGS="$CFLAGS -DHAVE_GETOSTBYNAME_F"])

###########################################################################

AC_CHECK_HEADERS(math.h, [ ],
                 [AC_MSG_WARN([can't find math.h: hope builtin...])])
AC_CHECK_LIB(m, sqrt, [LIBS="-lm $LIBS"],
             [AC_MSG_WARN([can't find libm: hope to use libc...])])

###########################################################################

AC_CHECK_HEADERS([zlib.h], [ ],
	     [AC_MSG_ERROR([can't find libz: won't be able to compile])])
AC_CHECK_LIB(z, inflate, [LIBS="-lz $LIBS"],
	     [AC_MSG_ERROR([can't find libz: won't be able to compile])])

###########################################################################

AC_CHECK_HEADERS([netcdf.h], [ ],
	     [AC_MSG_ERROR([netcdf include is required for compilation])])
AC_CHECK_LIB(netcdf, nc_open, [LIBS="-lnetcdf $LIBS"],
	     [AC_MSG_ERROR([netcdf library is required for compilation])])

###########################################################################

AC_OUTPUT(Makefile)
